--- a/compose/docker-logstash.yml
+++ b/compose/docker-logstash.yml
@@ -17,7 +17,7 @@
       # local network:
       intnet:
         ipv4_address: ${ES_NET}.5
-    # ports:
+    ports:
       # syslog access pipeline
       # - 5000:5000/udp
       # - 5000:5000/tcp
@@ -25,9 +25,9 @@
       # - 5001:5001/udp
       # - 5001:5001/tcp
       # beat pipeline
-      # - ${LOGSTASH_PORT}:5044
+      - ${LOGSTASH_PORT}:5044
       # elastic-agent pipeline
-      # - 5045:5045
+      - 5045:5045
       # metrics
       # - 9600:9600
     volumes:
