--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -17,8 +17,8 @@
       # local network:
       intnet:
         ipv4_address: ${ES_NET}.6
-    # ports:
-      # - ${KIBANA_PORT}:5601
+    ports:
+      - ${KIBANA_PORT}:5601
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/hosts/hosts:/etc/hosts
