--- a/compose/docker-apm.yml
+++ b/compose/docker-apm.yml
@@ -10,7 +10,7 @@
     image: docker.elastic.co/apm/apm-server:${STACK_VERSION}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-apm-server"
-    hostname: "apm-server"
+    hostname: "apm-server.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik
       # default:
@@ -29,7 +29,8 @@
       - ./logs/apm:/usr/share/apm-server/logs
       - apm:/usr/share/apm-server
     environment:
-      # - AGENT_API_KEY=${AGENT_API_KEY}
+      - APP_HOST=${APP_HOST}
+      - APP_NET=${INT_NETWORK}
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
       - ELASTICSEARCH_USERNAME=elastic
@@ -42,7 +43,7 @@
 #     labels:
 #       - "traefik.enable=true"
 #       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.apm-server-public.rule=Host(`apm-server`)"
+#       - "traefik.http.routers.apm-server-public.rule=Host(`apm-server.${APP_HOST}.${INT_NETWORK}`)"
 #       - "traefik.http.routers.apm-server-public.service=apm-server-${APP_ID}"
 #       - "traefik.http.routers.apm-server-public.entrypoints=https"
 #       - "traefik.http.routers.apm-server-public.tls=true"
