--- a/compose/docker-es01.yml
+++ b/compose/docker-es01.yml
@@ -1,7 +1,7 @@
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-es01"
-    hostname: "es01"
+    hostname: "es01.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
       # default:
@@ -10,7 +10,7 @@
         ipv4_address: ${ES_NET}.2
     ports:
       - ${ES_PORT}:9200
-      - 9300:9300
+      # - 9300:9300
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/hosts/hosts:/etc/hosts
@@ -36,14 +36,14 @@
 #     labels:
 #       - "traefik.enable=true"
 #       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.es01-${APP_ID}-public.rule=Host(`es01`)"
+#       - "traefik.http.routers.es01-${APP_ID}-public.rule=Host(`es01.${APP_HOST}.${INT_NETWORK}`)"
 #       - "traefik.http.routers.es01-${APP_ID}-public.entrypoints=https"
 #       - "traefik.http.routers.es01-${APP_ID}-public.tls=true"
 #       # - "traefik.http.routers.es01-${APP_ID}-public.middlewares=es01-${APP_ID}@docker"
 #       # - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.scheme=https"
 #       # - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.port=9200"
 #       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.port=9200"
-#       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.scheme=https"
+#       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.scheme=http"
     ulimits:
       memlock:
         soft: -1
