--- a/compose/docker-es02.yml
+++ b/compose/docker-es02.yml
@@ -6,16 +6,16 @@
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-es02"
-    hostname: "es02"
+    hostname: "es02.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
       # default:
       # local network:
       intnet:
         ipv4_address: ${ES_NET}.3
-    ports:
-      - 9201:9201
-      - 9301:9301
+    # ports:
+      # - 9201:9201
+      # - 9301:9301
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/hosts/hosts:/etc/hosts
@@ -45,14 +45,14 @@
 #     labels:
 #       - "traefik.enable=true"
 #       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.es02-${APP_ID}-public.rule=Host(`es02`)"
+#       - "traefik.http.routers.es02-${APP_ID}-public.rule=Host(`es02.${APP_HOST}.${INT_NETWORK}`)"
 #       - "traefik.http.routers.es02-${APP_ID}-public.entrypoints=https"
 #       - "traefik.http.routers.es02-${APP_ID}-public.tls=true"
 #       # - "traefik.http.routers.es02-${APP_ID}-public.middlewares=es02-${APP_ID}@docker"
 #       # - "traefik.http.middlewares.es02-${APP_ID}.redirectscheme.scheme=https"
 #       # - "traefik.http.middlewares.es02-${APP_ID}.redirectscheme.port=9201"
 #       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.port=9201"
-#       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.scheme=https"
+#       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.scheme=http"
     ulimits:
       memlock:
         soft: -1
