--- a/compose/docker-filebeat.yml
+++ b/compose/docker-filebeat.yml
@@ -10,7 +10,7 @@
     image: docker.elastic.co/beats/filebeat:${STACK_VERSION}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-filebeat"
-    hostname: "filebeat"
+    hostname: "filebeat.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
       #  default:
@@ -31,9 +31,12 @@
       - ./logs/es01:/usr/share/filebeat/elogs/es01
       - ./logs/es02:/usr/share/filebeat/elogs/es02
       - ./logs/kibana:/usr/share/filebeat/elogs/kibana
-      - /home/eldy/repos/platypus-box/logs/traefik:/usr/share/filebeat/elogs/traefik
+      - /root/platypus-box/logs/traefik:/usr/share/filebeat/elogs/traefik
+      # - /home/eldy/repos/platypus-box/logs/traefik:/usr/share/filebeat/elogs/traefik
       - filebeat:/usr/share/filebeat
     environment:
+      - APP_HOST=${APP_HOST}
+      - APP_NET=${INT_NETWORK}
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
       - ELASTICSEARCH_USERNAME=elastic
@@ -45,7 +48,7 @@
 #     labels:
 #       - "traefik.enable=true"
 #       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.filebeat-${APP_ID}.rule=Host(`filebeat`)"
+#       - "traefik.http.routers.filebeat-${APP_ID}.rule=Host(`filebeat.${APP_HOST}.${INT_NETWORK}`)"
 #       - "traefik.http.routers.filebeat-${APP_ID}.entrypoints=https"
 #       - "traefik.http.routers.filebeat-${APP_ID}.tls=true"
 #       - "traefik.http.services.filebeat-${APP_ID}.loadbalancer.server.port=5066"
