--- a/compose/docker-heartbeat.yml
+++ b/compose/docker-heartbeat.yml
@@ -10,7 +10,7 @@
     image: docker.elastic.co/beats/heartbeat:${STACK_VERSION}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-heartbeat"
-    hostname: "heartbeat"
+    hostname: "heartbeat.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
       # default:
@@ -25,6 +25,8 @@
       - ./logs/heartbeat:/usr/share/heartbeat/logs
       - heartbeat:/usr/share/heartbeat
     environment:
+      - APP_HOST=${APP_HOST}
+      - APP_NET=${INT_NETWORK}
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
       - ELASTICSEARCH_USERNAME=elastic
@@ -35,7 +37,7 @@
 #     labels:
 #       - "traefik.enable=true"
 #       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.heartbeat-public.rule=Host(`heartbeat`)"
+#       - "traefik.http.routers.heartbeat-public.rule=Host(`heartbeat.${APP_HOST}.${INT_NETWORK}`)"
 #       - "traefik.http.routers.heartbeat-public.entrypoints=https"
 #       - "traefik.http.routers.heartbeat-public.tls=true"
 #       - "traefik.http.services.heartbeat-${APP_ID}.loadbalancer.server.port=5066"
