--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -10,10 +10,10 @@
     image: docker.elastic.co/kibana/kibana:${STACK_VERSION}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-kibana"
-    hostname: "kibana"
+    hostname: "kibana.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
-      default:
+      # default:
       # local network:
       intnet:
         ipv4_address: ${ES_NET}.6
@@ -27,11 +27,13 @@
       - ./extras/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
       - kibana:/usr/share/kibana
     environment:
+      - APP_HOST=${APP_HOST}
+      - APP_NET=${INT_NETWORK}
       - SERVERNAME=kibana.${APP_HOST}.${INT_NETWORK}
       - STACK_VERSION=${STACK_VERSION}
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
-      - ELASTICSEARCH_HOSTS=https://es01:9200
+      - ELASTICSEARCH_HOSTS=https://es01.${APP_HOST}.${INT_NETWORK}:9200
       - ELASTICSEARCH_USERNAME=kibana_system
       - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/kibana/config/certs/ca/ca.crt
@@ -42,17 +44,18 @@
       - NODE_OPTIONS=${KIBANA_NODE_OPTS}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
       - KIBANA_HOST=${KIBANA_HOST}
+      - ES_NET=${ES_NET}
     labels:
-      - "traefik.enable=true"
+      - "traefik.enable=false"
       - "traefik.docker.network=${DOCKER_NETWORK}"
       - "traefik.http.routers.kibana-public.rule=Host(`${KIBANA_HOST}`)"
       - "traefik.http.routers.kibana-public.entrypoints=https"
-      - "traefik.http.routers.kibana-public.tls=true"
-      # - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
-      # - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
-      # - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
-      - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
-      - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
+      - "traefik.http.routers.kibana-public.tls=false"
+      - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
+      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
+      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
+      # - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
+      # - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
     ulimits:
       memlock:
         soft: -1
