--- a/extras/apm-server/apm-server.yml
+++ b/extras/apm-server/apm-server.yml
@@ -14,8 +14,7 @@ apm-server:
     enabled: true
     output:
       elasticsearch:
-        hosts: 
-          - "https://es01:9200"
+        hosts: ["https://es01.${APP_HOST}.${APP_NET}:9200"]
         protocol: "https"
         #api_key: "id:api_key"
         # username: "apm_system"
@@ -29,7 +28,7 @@ apm-server:
 #---------------------------- APM Server - Agent Configuration ----------------------------
   kibana:
     enabled: true
-    host: "https://kibana:5601"
+    host: "https://kibana.${APP_HOST}.${APP_NET}:5601"
     protocol: "https"
     # api_key: "${AGENT_API_KEY}"
     # username: "apm_system"
@@ -46,9 +45,7 @@ apm-server:
 #-------------------------- Elasticsearch output --------------------------
 output.elasticsearch:
   enabled: true
-  hosts: 
-    - "https://es01:9200"
-    # - "https://es02:9201"
+  hosts: ["https://es01.${APP_HOST}.${APP_NET}:9200"]
   protocol: "https"
   # username: "apm_system"
   username: "${ELASTICSEARCH_USERNAME}"
@@ -72,9 +69,7 @@ monitoring:
   elasticsearch:
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
-    hosts: 
-      - "https://es01:9200"
-      # - "https://es02:9201"
+    hosts: ["https://es01.${APP_HOST}.${APP_NET}:9200"]
     protocol: "https"
     ssl.enabled: true
     ssl.certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
