--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -17,13 +17,13 @@ output:
   # for provisioning:
   logstash:
     enabled: true
-    hosts: ["logstash:5045"]
+    hosts: ["logstash.${APP_HOST}.${APP_NET}:5045"]
     ssl:
-      # certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+      certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
       certificate: "${LOGSTASH_SERVER_CERT}"
       key: "${LOGSTASH_SERVER_CERT_KEY}"
-      # @verification_mode: "${VERIFICATION_MODE}"
-      verification_mode: "none"
+      verification_mode: "${VERIFICATION_MODE}"
+      # verification_mode: "none"
    
   # for /filebeat -e setup --dashboards:
   # elasticsearch:
@@ -43,7 +43,7 @@ setup:
     #index.codec: best_compression
     #_source.enabled: false
   elasticsearch:
-    hosts: ["https://es01:9200"]
+    hosts: ["https://es01.${APP_HOST}.${APP_NET}:9200"]
     protocol: "https"
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
@@ -53,7 +53,7 @@ setup:
       verification_mode: "${VERIFICATION_MODE}"
   
   kibana:
-    host: "https://kibana:5601"
+    host: "https://kibana.${APP_HOST}.${APP_NET}:5601"
     username: '${ELASTICSEARCH_USERNAME}'
     password: '${ELASTICSEARCH_PASSWORD}'
     protocol: "https"
