--- a/extras/logstash/syslog-access.conf
+++ b/extras/logstash/syslog-access.conf
@@ -26,7 +26,7 @@ filter {
 # https://www.elastic.co/guide/en/logstash/current/plugins-outputs-elasticsearch.html
 output {
   elasticsearch {
-    hosts => ["https://es01:9200"]
+    hosts => ["https://es01.${APP_HOST}.${APP_NET}:9200"]
     data_stream => true
     ssl => true
     cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
