--- a/extras/metricbeat/metricbeat.yml
+++ b/extras/metricbeat/metricbeat.yml
@@ -41,7 +41,7 @@ output:
 # ----------------------------- Elasticsearch Output ----------------------------
 
   elasticsearch:
-    hosts: ["https://es01:9200"]
+    hosts: ["https://es01.${APP_HOST}.${APP_NET}:9200"]
     protocol: "https"
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
@@ -60,7 +60,7 @@ setup:
     # _source.enabled: false
 
   elasticsearch:
-    hosts: ["https://es01:9200"]
+    hosts: ["https://es01.${APP_HOST}.${APP_NET}:9200"]
     protocol: "https"
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
@@ -70,7 +70,7 @@ setup:
       verification_mode: "${VERIFICATION_MODE}"
 
   kibana:
-    host: "https://kibana:5601"
+    host: "https://kibana.${APP_HOST}.${APP_NET}:5601"
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
     # ssl:
