--- a/extras/metricbeat/metricbeat/beat-xpack.yml
+++ b/extras/metricbeat/metricbeat/beat-xpack.yml
@@ -5,10 +5,10 @@
   xpack.enabled: true
   period: 10s
   hosts: 
-    - apm-server:5066
-    - heartbeat:5066
-    - metricbeat:5066
-    - filebeat:5066
+    - apm-server.${APP_HOST}.${APP_NET}:5066
+    - heartbeat.${APP_HOST}.${APP_NET}:5066
+    - metricbeat.${APP_HOST}.${APP_NET}:5066
+    - filebeat.${APP_HOST}.${APP_NET}:5066
   #username: "beats_system"
   username: "${ELASTICSEARCH_USERNAME}"
   password: "${ELASTICSEARCH_PASSWORD}"
