--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -13,7 +13,7 @@
     hostname: "kibana.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
-      # default:
+      default:
       # local network:
       intnet:
         ipv4_address: ${ES_NET}.6
@@ -46,10 +46,10 @@
       - KIBANA_HOST=${KIBANA_HOST}
       - ES_NET=${ES_NET}
     labels:
-      - "traefik.enable=false"
+      - "traefik.enable=true"
       - "traefik.docker.network=${DOCKER_NETWORK}"
       - "traefik.http.routers.kibana-public.rule=Host(`${KIBANA_HOST}`)"
-      - "traefik.http.routers.kibana-public.entrypoints=https"
+      - "traefik.http.routers.kibana-public.entrypoints=http"
       - "traefik.http.routers.kibana-public.tls=false"
       - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
