--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -49,13 +49,13 @@
       - "traefik.enable=true"
       - "traefik.docker.network=${DOCKER_NETWORK}"
       - "traefik.http.routers.kibana-public.rule=Host(`${KIBANA_HOST}`)"
-      - "traefik.http.routers.kibana-public.entrypoints=http"
-      - "traefik.http.routers.kibana-public.tls=false"
+      - "traefik.http.routers.kibana-public.entrypoints=https"
+      - "traefik.http.routers.kibana-public.tls=true"
       - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
-      # - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
-      # - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
+      - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
+      - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
     ulimits:
       memlock:
         soft: -1
