--- a/compose/docker-es02.yml
+++ b/compose/docker-es02.yml
@@ -59,7 +59,7 @@
         soft: -1
         hard: -1
     healthcheck:
-      test: ["CMD-SHELL", "curl -s --cacert config/certs/ca/ca.crt https://localhost:9201 | grep -q 'missing authentication credentials'" ]
+      test: ["CMD-SHELL", "curl -s --cacert config/certs/ca/ca.crt https://${ES_NET}.3:9201 | grep -q 'missing authentication credentials'" ]
       interval: 10s
       timeout: 10s
       retries: 500
