--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -13,7 +13,7 @@
     hostname: "kibana.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
-      default:
+      # default:
       # local network:
       intnet:
         ipv4_address: ${ES_NET}.6
@@ -45,7 +45,7 @@
       - VERIFICATION_MODE=${VERIFICATION_MODE}
       - KIBANA_HOST=${KIBANA_HOST}
     labels:
-      - "traefik.enable=true"
+      - "traefik.enable=false"
       - "traefik.docker.network=${DOCKER_NETWORK}"
       - "traefik.http.routers.kibana-public.rule=Host(`${KIBANA_HOST}`)"
       - "traefik.http.routers.kibana-public.entrypoints=https"
@@ -53,8 +53,6 @@
       - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
-      - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
-      - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
     ulimits:
       memlock:
         soft: -1
