--- a/extras/apm-server/apm-server.yml
+++ b/extras/apm-server/apm-server.yml
@@ -28,7 +28,7 @@ apm-server:
 #---------------------------- APM Server - Agent Configuration ----------------------------
   kibana:
     enabled: true
-    host: "https://kibana.${APP_HOST}.${APP_NET}:5601"
+    host: "https://kibana.${APP_NET}:5601"
     protocol: "https"
     # api_key: "${AGENT_API_KEY}"
     # username: "apm_system"
