--- a/extras/heartbeat/heartbeat.yml
+++ b/extras/heartbeat/heartbeat.yml
@@ -49,7 +49,7 @@ heartbeat.monitors:
   tags: [tcp]
   hosts:
     - logstash.${APP_HOST}.${APP_NET}:9600
-    - kibana.${APP_HOST}.${APP_NET}:5601
+    - kibana.${APP_NET}:5601
     - filebeat.${APP_HOST}.${APP_NET}:5066
     - apm-server.${APP_HOST}.${APP_NET}:5066
     - heartbeat.${APP_HOST}.${APP_NET}:5066
@@ -93,7 +93,7 @@ output:
 setup:
   ilm.overwrite: true
   kibana:
-    host: "https://kibana.${APP_HOST}.${APP_NET}:5601"
+    host: "https://kibana.${APP_NET}:5601"
     username: '${ELASTICSEARCH_USERNAME}'
     password: '${ELASTICSEARCH_PASSWORD}'
     ssl:
