--- a/compose/docker-logstash.yml
+++ b/compose/docker-logstash.yml
@@ -49,6 +49,7 @@
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
       - ELASTIC_SSL_CERTIFICATEAUTHORITY=/usr/share/logstash/config/certs/ca.crt
+      - ES_NET=${ES_NET}
       - LOGSTASH_USERNAME=${LOGSTASH_USERNAME}
       - LOGSTASH_PASSWORD=${LOGSTASH_PASSWORD}
       - LS_JAVA_OPTS=${LS_JAVA_OPTS}
