--- a/compose/docker-filebeat.yml
+++ b/compose/docker-filebeat.yml
@@ -42,6 +42,7 @@
       - ELASTICSEARCH_USERNAME=elastic
       - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/filebeat/certs/ca/ca.crt
+      - ES_NET=${ES_NET}
       - LOGSTASH_SERVER_CERT=/usr/share/filebeat/certs/logstash/logstash.crt
       - LOGSTASH_SERVER_CERT_KEY=/usr/share/filebeat/certs/logstash/logstash.key
       - VERIFICATION_MODE=${VERIFICATION_MODE}        
