--- a/compose/docker-metricbeat.yml
+++ b/compose/docker-metricbeat.yml
@@ -36,6 +36,7 @@
       - ELASTICSEARCH_USERNAME=elastic
       - ELASTICSEARCH_PASSWORD=${ELASTIC_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/metricbeat/certs/ca/ca.crt
+      - ES_NET=${ES_NET}
       - LOGSTASH_SERVER_CERT=/usr/share/metricbeat/certs/logstash/logstash.crt
       - LOGSTASH_SERVER_CERT_KEY=/usr/share/metricbeat/certs/logstash/logstash.key
       - STAGE=${STAGE}
