--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -2,7 +2,7 @@
 
 http.enabled: true
 http.port: 5066
-http.host: "0.0.0.0"
+http.host: "${ES_NET}.9"
 
 monitoring:
   enabled: false
@@ -17,7 +17,7 @@ output:
   # for provisioning:
   logstash:
     enabled: true
-    hosts: ["logstash.${APP_HOST}.${APP_NET}:5045"]
+    hosts: ["logstash.${APP_NET}:5045"]
     ssl:
       certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
       certificate: "${LOGSTASH_SERVER_CERT}"
@@ -27,7 +27,7 @@ output:
    
   # for /filebeat -e setup --dashboards:
   # elasticsearch:
-  #   hosts: ["https://es01:9200"]
+  #   hosts: ["https://es01.${APP_NET}:9200"]
   #   protocol: "https"
   #   username: "${ELASTICSEARCH_USERNAME}"
   #   password: "${ELASTICSEARCH_PASSWORD}"
@@ -43,7 +43,7 @@ setup:
     #index.codec: best_compression
     #_source.enabled: false
   elasticsearch:
-    hosts: ["https://es01.${APP_HOST}.${APP_NET}:9200"]
+    hosts: ["https://es01.${APP_NET}:9200"]
     protocol: "https"
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
