--- a/extras/heartbeat/heartbeat.yml
+++ b/extras/heartbeat/heartbeat.yml
@@ -2,7 +2,7 @@
 
 http.enabled: true
 http.port: 5066
-http.host: "0.0.0.0"
+http.host: "${ES_NET}.7"  
 
 monitoring:
   enabled: false
@@ -31,10 +31,10 @@ heartbeat.monitors:
   tags: [web]
   hosts:
     # ELK
-    - https://es01.${APP_HOST}.${APP_NET}:9200
-    - https://es02.${APP_HOST}.${APP_NET}:9201
+    - https://es01.${APP_NET}:9200
+    - https://es02.${APP_NET}:9201
     # logstash for finger print:
-    #- https://logstash.${APP_HOST}.${APP_NET}:5044
+    #- https://logstash.${APP_NET}:5044
   ssl:
     certificate_authorities: ['${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}']
     verification_mode: "none"
@@ -48,12 +48,12 @@ heartbeat.monitors:
   service.name: heartbeat-tcp
   tags: [tcp]
   hosts:
-    - logstash.${APP_HOST}.${APP_NET}:9600
+    - logstash.${APP_NET}:9600
     - kibana.${APP_NET}:5601
-    - filebeat.${APP_HOST}.${APP_NET}:5066
-    - apm-server.${APP_HOST}.${APP_NET}:5066
-    - heartbeat.${APP_HOST}.${APP_NET}:5066
-    - metricbeat.${APP_HOST}.${APP_NET}:5066
+    - filebeat.${APP_NET}:5066
+    - apm-server.${APP_NET}:5066
+    - heartbeat.${APP_NET}:5066
+    - metricbeat.${APP_NET}:5066
 
 #  - type: icmp
 #   schedule: '*/15 * * * * *'
@@ -81,7 +81,7 @@ processors:
 
 output:
   elasticsearch:
-    hosts: ["https://es01.${APP_HOST}.${APP_NET}:9200"]
+    hosts: ["https://es01.${APP_NET}:9200"]
     protocol: "https"
     username: '${ELASTICSEARCH_USERNAME}'
     password: '${ELASTICSEARCH_PASSWORD}'
