--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -38,7 +38,7 @@ filter {
 # https://www.elastic.co/guide/en/logstash/current/use-ingest-pipelines.html
 output {
     elasticsearch {
-      hosts => ["https://es01.${APP_HOST}.${APP_NET}:9200"]
+      hosts => ["https://es01.${APP_NET}:9200"]
       data_stream => true
       ssl => true
       cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
