--- a/extras/logstash/logstash.yml
+++ b/extras/logstash/logstash.yml
@@ -1,10 +1,10 @@
-http.host: 0.0.0.0
+http.host: "${ES_NET}.5"
 
 monitoring:
   enabled: false
   cluster_uuid: "${CLUSTER_UUID}"
   # elasticsearch:
-  #   hosts: ["https://es01.${APP_HOST}.${APP_NET}:9200"]
+  #   hosts: ["https://es01.${APP_NET}:9200"]
   #   ssl.certificate_authority: "${ELASTIC_SSL_CERTIFICATEAUTHORITY}"
   #   username: "elastic"
   #   password: "${LOGSTASH_PASSWORD}"
