--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -29,11 +29,11 @@
     environment:
       - APP_HOST=${APP_HOST}
       - APP_NET=${INT_NETWORK}
-      - SERVERNAME=kibana.${APP_HOST}.${INT_NETWORK}
+      - SERVERNAME=kibana.${INT_NETWORK}
       - STACK_VERSION=${STACK_VERSION}
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
-      - ELASTICSEARCH_HOSTS=https://es01.${APP_HOST}.${INT_NETWORK}:9200
+      - ELASTICSEARCH_HOSTS=https://es01.${INT_NETWORK}:9200
       - ELASTICSEARCH_USERNAME=kibana_system
       - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/kibana/config/certs/ca/ca.crt
