--- a/compose/docker-setup-eliasondrej.yml
+++ b/compose/docker-setup-eliasondrej.yml
@@ -37,52 +37,77 @@
           "instances:\n"\
           "  - name: es01\n"\
           "    dns:\n"\
+          "      - localhost\n"\
           "      - es01\n"\
           "      - es01.${INT_NETWORK}\n"\
           "    ip:\n"\
+          "      - ::1\n"\
+          "      - 127.0.0.1\n"\
           "      - ${ES_NET}.2\n"\
           "  - name: es02\n"\
           "    dns:\n"\
+          "      - localhost\n"\
           "      - es02\n"\
           "      - es02.${INT_NETWORK}\n"\
           "    ip:\n"\
+          "      - ::1\n"\
+          "      - 127.0.0.1\n"\
           "      - ${ES_NET}.3\n"\
           "  - name: logstash\n"\
           "    dns:\n"\
+          "      - localhost\n"\
           "      - logstash\n"\
           "      - logstash.${INT_NETWORK}\n"\
           "    ip:\n"\
+          "      - ::1\n"\
+          "      - 127.0.0.1\n"\
           "      - ${ES_NET}.5\n"\
           "  - name: kibana\n"\
           "    dns:\n"\
+          "      - localhost\n"\
           "      - kibana\n"\
           "      - ${APP_HOST}.${INT_NETWORK}\n"\
+          "      - ${KIBANA_HOST}\n"\
           "    ip:\n"\
+          "      - ::1\n"\
+          "      - 127.0.0.1\n"\
           "      - ${ES_NET}.6\n"\
           "      - ${ES_IP}\n"\
           "  - name: heartbeat\n"\
           "    dns:\n"\
+          "      - localhost\n"\
           "      - heartbeat\n"\
           "      - heartbeat.${INT_NETWORK}\n"\
           "    ip:\n"\
+          "      - ::1\n"\
+          "      - 127.0.0.1\n"\
           "      - ${ES_NET}.7\n"\
           "  - name: filebeat\n"\
           "    dns:\n"\
+          "      - localhost\n"\
           "      - filebeat\n"\
           "      - filebeat.${INT_NETWORK}\n"\
           "    ip:\n"\
+          "      - ::1\n"\
+          "      - 127.0.0.1\n"\
           "      - ${ES_NET}.9\n"\
           "  - name: metricbeat\n"\
           "    dns:\n"\
+          "      - localhost\n"\
           "      - metricbeat\n"\
           "      - metricbeat.${INT_NETWORK}\n"\
           "    ip:\n"\
+          "      - ::1\n"\
+          "      - 127.0.0.1\n"\
           "      - ${ES_NET}.8\n"\
           "  - name: apm-server\n"\
           "    dns:\n"\
+          "      - localhost\n"\
           "      - apm-server\n"\
           "      - apm-server.${INT_NETWORK}\n"\
           "    ip:\n"\
+          "      - ::1\n"\
+          "      - 127.0.0.1\n"\
           "      - ${ES_NET}.10\n"\
           > config/certs/instances.yml;
           if [ ! -f config/certs/certs.zip ]; then
