--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -33,7 +33,7 @@
       - STACK_VERSION=${STACK_VERSION}
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
-      - ELASTICSEARCH_HOSTS=https://es01.${INT_NETWORK}:9200
+      - ELASTICSEARCH_HOSTS=["https://es01.${INT_NETWORK}:9200", "https://es02.${INT_NETWORK}:9201"]
       - ELASTICSEARCH_USERNAME=kibana_system
       - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/kibana/config/certs/ca/ca.crt
