--- a/extras/elasticsearch/elasticsearch.yml
+++ b/extras/elasticsearch/elasticsearch.yml
@@ -1,14 +1,14 @@
 cluster.initial_master_nodes: "${ES_NODES}"
 
 cluster.name: "${CLUSTER_NAME}"
-network.host: 0.0.0.0
+#network.host: 0.0.0.0
 node.roles: [master, data, ingest, ml, remote_cluster_client]
 bootstrap.memory_lock: true
 
 xpack:
   license.self_generated.type: "${LICENSE}"
   security:
-    authc.api_key.enabled: true        
+    #authc.api_key.enabled: true        
     http:
       ssl:
         enabled: true
