--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -13,7 +13,7 @@
     hostname: "kibana.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
-      # default:
+      default:
       # local network:
       intnet:
         ipv4_address: ${ES_NET}.6
@@ -43,15 +43,15 @@
       - NODE_OPTIONS=${KIBANA_NODE_OPTS}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
       - KIBANA_HOST=${KIBANA_HOST}
-#     labels:
-#      - "traefik.enable=true"
-#      - "traefik.docker.network=${DOCKER_NETWORK}"
-#      - "traefik.http.routers.kibana-public.rule=Host(`${KIBANA_HOST}`)"
-#      - "traefik.http.routers.kibana-public.entrypoints=https"
-#      - "traefik.http.routers.kibana-public.tls=true"
-#      - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
-#      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
-#      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=${DOCKER_NETWORK}"
+      - "traefik.http.routers.kibana-public.rule=Host(`${KIBANA_HOST}`)"
+      - "traefik.http.routers.kibana-public.entrypoints=https"
+      - "traefik.http.routers.kibana-public.tls=true"
+      - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
+      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
+      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
     ulimits:
       memlock:
         soft: -1
