--- a/compose/docker-logstash.yml
+++ b/compose/docker-logstash.yml
@@ -4,7 +4,7 @@
 #
   logstash:
     depends_on:
-      es02:
+      kibana:
         condition: service_healthy
     # Ubuntu - logstash 
     image: logstash:${STACK_VERSION}
