--- a/extras/heartbeat/heartbeat.yml
+++ b/extras/heartbeat/heartbeat.yml
@@ -18,27 +18,27 @@ heartbeat.config.monitors:
 
 heartbeat.monitors:
 
-- type: http
-  schedule: '*/15 * * * * *'
-  id: http-service
-  name: HTTP Service
-  data_stream.namespace: default
-  service.name: heartbeat-http
-  username: '${ELASTICSEARCH_USERNAME}'
-  password: '${ELASTICSEARCH_PASSWORD}'
-  # api_key: ${AGENT_API_KEY}
-  check.response.status: [200]
-  tags: [web]
-  hosts:
-    # ELK
-    - https://es01.${APP_NET}:9200
-    - https://es02.${APP_NET}:9201
-    # logstash for finger print:
-    #- https://logstash.${APP_NET}:5044
-  ssl:
-    certificate_authorities: ['${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}']
-    verification_mode: "none"
-    # verification_mode: "${VERIFICATION_MODE}"
+# - type: http
+#   schedule: '*/15 * * * * *'
+#   id: http-service
+#   name: HTTP Service
+#   data_stream.namespace: default
+#   service.name: heartbeat-http
+#   username: '${ELASTICSEARCH_USERNAME}'
+#   password: '${ELASTICSEARCH_PASSWORD}'
+#   # api_key: ${AGENT_API_KEY}
+#   check.response.status: [200]
+#   tags: [web]
+#   hosts:
+#     # ELK
+#     - https://es01.${APP_NET}:9200
+#     - https://es02.${APP_NET}:9201
+#     # logstash for finger print:
+#     #- https://logstash.${APP_NET}:5044
+#   ssl:
+#     certificate_authorities: ['${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}']
+#     verification_mode: "none"
+#     # verification_mode: "${VERIFICATION_MODE}"
 
 - type: tcp
   schedule: '*/15 * * * * *'
@@ -48,6 +48,8 @@ heartbeat.monitors:
   service.name: heartbeat-tcp
   tags: [tcp]
   hosts:
+    - es01.${APP_NET}:9200
+    - es02.${APP_NET}:9201
     - logstash.${APP_NET}:9600
     - kibana.${APP_NET}:5601
     - filebeat.${APP_NET}:5066
