--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -44,15 +44,15 @@
       - NODE_OPTIONS=${KIBANA_NODE_OPTS}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
       - KIBANA_HOST=${KIBANA_HOST}
-    labels:
-      - "traefik.enable=false"
-      - "traefik.docker.network=${DOCKER_NETWORK}"
-      - "traefik.http.routers.kibana-public.rule=Host(`${KIBANA_HOST}`)"
-      - "traefik.http.routers.kibana-public.entrypoints=https"
-      - "traefik.http.routers.kibana-public.tls=true"
-      - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
-      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
-      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
+#     labels:
+#       - "traefik.enable=false"
+#       - "traefik.docker.network=${DOCKER_NETWORK}"
+#       - "traefik.http.routers.kibana-public.rule=Host(`${KIBANA_HOST}`)"
+#       - "traefik.http.routers.kibana-public.entrypoints=https"
+#       - "traefik.http.routers.kibana-public.tls=true"
+#       - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
+#       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
+#       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
     ulimits:
       memlock:
         soft: -1
