--- a/extras/logstash/elastic-agent.conf
+++ b/extras/logstash/elastic-agent.conf
@@ -17,6 +17,7 @@ output {
     hosts => ["https://es01.${APP_NET}:9200"]
     data_stream => true
     ssl => true
+    ssl_certificate_verification => false
     cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
     user => "${LOGSTASH_USERNAME}"
     password => "${LOGSTASH_PASSWORD}"
